[package]
name = "git-pm"
version = "0.1.2"
edition = "2024"
description = "A git CLI plugin for project management (git pm ...)"
license = "MIT"
repository = "https://github.com/thomasmarcel/git-pm"
homepage = "https://github.com/thomasmarcel/git-pm"
documentation = "https://docs.rs/git-pm"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["git", "cli", "plugin", "project-management"]

[[bin]]
name = "git-pm"
path = "src/main.rs"

[lib]
name = "git_pm"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
deunicode = "1.6.2"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
